fix: wrapped child elements within landmark elements.

--- a/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/styles.css
@@ -6,9 +6,9 @@ body {
 
 .main {
     justify-content: center;
+    margin-top: 150px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 150px;
     background-color:#15263F;
     width: 350px;
     height: 596px;
@@ -29,14 +29,14 @@ body {
     padding-top: 15px;
 } 
 
-h3 {
+h1 {
     font-family: 'Outfit';
     font-style: normal;
     padding-left: 25px;
     margin-bottom: 16px;
 }
 
-h3:hover {
+h1:hover {
     color: #00FFF8;
     cursor: pointer;
 }
